Modify footer.html Include and CSS Generation
Changed the copyright statement in the footer to be a two-column, one-row table. The right cell holds the copyright statement and the left cell holds an added message.

Also added new CSS classes (in _base.scss) for <table>, <tr>, <th>, and <td> elements. This will allow for more well-organized display of information generated from the footer.html Include

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,7 +51,16 @@
 
     </div>
     <hr class="footer-col-hr"/>
-    <h2 class="footer-heading">&#169; {{ 'now' | date: "%Y" }} Ryan Branch</h2>
+    <table class="center borderspaced2x">
+      <tr>
+        <td class="borderless wide2col borderspaced2x">
+          <h2 class="footer-heading">A ryanbran.ch website</h2>
+        </td>
+        <td class="borderless wide2col borderspaced2x">
+          <h2 class="footer-heading">&#169; {{ 'now' | date: "%Y" }} Ryan Branch LLC</h2>
+        </td>
+      </tr>
+    </table>
     {%- include social.html -%}
 
   </div>
